welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: value Length is not a member of Array[Int]
	for (i<-0 to nums.Length-1) {
                          ^