welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	for (i<-0 to nums.Length-1) {
		if (nums(i)==value) {
		return i
		}
	}
	return -1
}
